--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,88 +4,69 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DnD Sheet</title>
+
   <link rel="stylesheet" href="styles.css" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <div class="wrap">
-    <h1>DnD Sheet</h1>
 
-    <div id="status" class="muted">Подключение…</div>
+<div class="wrap">
 
-    <!-- 🧙 ЭКРАН 1: СПИСОК ПЕРСОНАЖЕЙ -->
-    <div id="listScreen" class="card">
-      <h2>Персонажи</h2>
-      <div class="row">
-        <input id="newName" placeholder="Имя персонажа" />
-        <button id="createBtn">Создать</button>
-      </div>
-      <ul id="chars"></ul>
+  <h1>DnD Sheet</h1>
+  <div id="status" class="muted">Подключение…</div>
+
+  <!-- ===================== -->
+  <!-- 🧙 ЭКРАН 1: ПЕРСОНАЖИ -->
+  <!-- ===================== -->
+  <div id="listScreen" class="card">
+
+    <h2>Персонажи</h2>
+
+    <div class="row">
+      <input id="newName" placeholder="Имя персонажа" />
+      <button id="createBtn">Создать</button>
     </div>
 
-<!-- 🧙‍♂️ ЭКРАН 2: ПЕРСОНАЖ -->
-    <div id="characterScreen" class="card" style="display:none">
+    <ul id="chars"></ul>
 
-      <button onclick="backToList()">← Назад</button>
+  </div>
 
-      <h2 id="charTitle">Персонаж</h2>
-      <div id="charMeta" class="muted"></div>
-    </div>
+  <!-- ===================== -->
+  <!-- 🧙‍♂️ ЭКРАН 2: ПЕРСОНАЖ -->
+  <!-- ===================== -->
+  <div id="characterScreen" class="card" style="display:none">
 
-    <!-- 🧩 ЭКРАН ПРЕДМЕТА -->
-    <div id="itemEditor" class="card" style="display:none">
+    <button onclick="backToList()">← Назад</button>
 
-      <button onclick="closeItemEditor()">← Назад</button>
-
-      <h2 id="itemEditorTitle">Новый предмет</h2>
-
-      <input id="itemName" placeholder="Название предмета" />
-      <textarea id="itemDesc" placeholder="Описание"></textarea>
-      <textarea id="itemStats" placeholder="Характеристики"></textarea>
-
-      <button onclick="saveItem()">💾 Сохранить</button>
-      <button id="deleteItemBtn"
-              onclick="deleteItem()"
-              style="display:none">
-        🗑 Удалить
-      </button>
-
-    </div>
+    <h2 id="charTitle"></h2>
+    <div id="charMeta" class="muted"></div>
 
     <!-- 📦 КОНТЕНТ ВКЛАДОК -->
     <div id="tabContent">
 
       <!-- 📊 ХАРАКТЕРИСТИКИ -->
       <div id="tab-stats" class="tab-content">
+
         <p><b>Имя:</b> <span id="viewName"></span></p>
         <p><b>Раса:</b> <span id="viewRace"></span></p>
         <p><b>Класс:</b> <span id="viewClass"></span></p>
         <p><b>Уровень:</b> <span id="viewLevel"></span></p>
 
         <button onclick="enableEdit()">✏️ Редактировать</button>
+
       </div>
 
       <!-- 🎒 ИНВЕНТАРЬ -->
       <div id="tab-inventory" class="tab-content" style="display:none">
 
-      <div class="inventory-header">
-        <h3>Инвентарь</h3>
-        <button class="add-btn" onclick="openAddItem()">➕</button>
+        <div class="inventory-header">
+          <h3>Инвентарь</h3>
+          <button onclick="openItemEditor()">➕</button>
+        </div>
+
+        <ul id="inventoryList" class="list"></ul>
+
       </div>
-
-      <ul id="inventoryList" class="list"></ul>
-
-      <!-- Модалка добавления -->
-      <div id="addItemModal" class="modal" style="display:none">
-        <input id="itemName" placeholder="Название">
-        <textarea id="itemDesc" placeholder="Описание"></textarea>
-        <textarea id="itemStats" placeholder="Характеристики"></textarea>
-
-        <button onclick="addItem()">Добавить</button>
-        <button onclick="closeAddItem()">Отмена</button>
-      </div>
-
-    </div>
 
       <!-- ✨ ЗАКЛИНАНИЯ -->
       <div id="tab-spells" class="tab-content" style="display:none">
@@ -94,32 +75,53 @@
 
     </div>
 
-    <!-- ➕ FAB: добавить предмет -->
-    <button id="addItemFab"
-            class="fab"
-            onclick="openItemEditor()"
+    <!-- 📌 НИЖНЯЯ НАВИГАЦИЯ -->
+    <div id="bottomNav" class="bottom-nav" style="display:none">
+
+      <button id="nav-stats" class="active" onclick="openTab('stats')">
+        <span class="icon">📊</span>
+        <span class="label">Хар-ки</span>
+      </button>
+
+      <button id="nav-inventory" onclick="openTab('inventory')">
+        <span class="icon">🎒</span>
+        <span class="label">Инвентарь</span>
+      </button>
+
+      <button id="nav-spells" onclick="openTab('spells')">
+        <span class="icon">✨</span>
+        <span class="label">Магия</span>
+      </button>
+
+    </div>
+
+  </div>
+
+  <!-- ===================== -->
+  <!-- 🧩 ЭКРАН: ПРЕДМЕТ -->
+  <!-- ===================== -->
+  <div id="itemEditor" class="card" style="display:none">
+
+    <button onclick="closeItemEditor()">← Назад</button>
+
+    <h2 id="itemEditorTitle">Предмет</h2>
+
+    <input id="editItemName" placeholder="Название предмета" />
+    <textarea id="editItemDesc" placeholder="Описание"></textarea>
+    <textarea id="editItemStats" placeholder="Характеристики"></textarea>
+
+    <button onclick="saveItem()">💾 Сохранить</button>
+
+    <button id="deleteItemBtn"
+            onclick="deleteItem()"
             style="display:none">
-      +
+      🗑 Удалить
     </button>
 
-    <!-- 📌 НИЖНЯЯ НАВИГАЦИЯ -->
-      <div class="bottom-nav">
-        <button id="nav-stats" class="active" onclick="openTab('stats')">
-          <span class="icon">📊</span>
-          <span class="label">Хар-ки</span>
-        </button>
+  </div>
 
-        <button id="nav-inventory" onclick="openTab('inventory')">
-          <span class="icon">🎒</span>
-          <span class="label">Инвентарь</span>
-        </button>
+</div>
 
-        <button id="nav-spells" onclick="openTab('spells')">
-          <span class="icon">✨</span>
-          <span class="label">Магия</span>
-        </button>
-      </div>
-
-  <script src="app.js?v=2"></script>
+<script src="app.js?v=2"></script>
 </body>
 </html>
