--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DnD Sheet</title>
 
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
   <link rel="stylesheet" href="styles.css" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
@@ -22,9 +27,14 @@
 
     <h2>Персонажи</h2>
 
-    <div class="row">
-      <input id="newName" placeholder="Имя персонажа" />
-      <button id="createBtn">Создать</button>
+    <div class="mb-3">
+      <input id="newName"
+             class="form-control mb-2"
+             placeholder="Имя персонажа" />
+
+      <button id="createBtn" class="btn btn-primary w-100">
+        Создать
+      </button>
     </div>
 
     <ul id="chars"></ul>
@@ -106,14 +116,34 @@
 
     <h2 id="itemEditorTitle">Предмет</h2>
 
-    <input id="editItemName" placeholder="Название предмета" />
-    <textarea id="editItemDesc" placeholder="Описание"></textarea>
-    <textarea id="editItemStats" placeholder="Характеристики"></textarea>
+    <div class="mb-3">
+      <input id="editItemName"
+             class="form-control"
+             placeholder="Название предмета" />
+    </div>
 
-    <button onclick="saveItem()">💾 Сохранить</button>
+    <div class="mb-3">
+      <textarea id="editItemDesc"
+                class="form-control"
+                rows="3"
+                placeholder="Описание"></textarea>
+    </div>
+
+    <div class="mb-3">
+      <textarea id="editItemStats"
+                class="form-control"
+                rows="3"
+                placeholder="Характеристики"></textarea>
+    </div>
+
+
+    <button onclick="saveItem()" class="btn btn-success w-100 mb-2">
+  💾 Сохранить
+    </button>
 
     <button id="deleteItemBtn"
             onclick="deleteItem()"
+            class="btn btn-danger w-100"
             style="display:none">
       🗑 Удалить
     </button>
