--- a/webapp/index.html
+++ b/webapp/index.html
@@ -51,6 +51,41 @@
     <h2 id="charTitle"></h2>
     <div id="charMeta" class="muted"></div>
 
+    <!-- ❤️ РЕСУРСЫ ПЕРСОНАЖА -->
+    <div class="resources">
+
+      <!-- HP -->
+      <div class="resource">
+        <div class="resource-label">
+          ❤️ HP <span id="hpText"></span>
+        </div>
+        <div class="progress">
+          <div id="hpBar" class="progress-bar hp"></div>
+        </div>
+      </div>
+
+      <!-- Mana -->
+      <div class="resource">
+        <div class="resource-label">
+          🔵 Мана <span id="manaText"></span>
+        </div>
+        <div class="progress">
+          <div id="manaBar" class="progress-bar mana"></div>
+        </div>
+      </div>
+
+      <!-- Energy -->
+      <div class="resource">
+        <div class="resource-label">
+          ⚡ Энергия <span id="energyText"></span>
+        </div>
+        <div class="progress">
+          <div id="energyBar" class="progress-bar energy"></div>
+        </div>
+      </div>
+
+    </div>
+
     <!-- 📦 КОНТЕНТ ВКЛАДОК -->
     <div id="tabContent">
 
