--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,11 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DnD Sheet</title>
 
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-
   <link rel="stylesheet" href="styles.css" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
@@ -27,12 +22,12 @@
 
     <h2>Персонажи</h2>
 
-    <div class="mb-3">
-      <input id="newName"
-             class="form-control mb-2"
-             placeholder="Имя персонажа" />
-
-      <button id="createBtn" class="btn btn-primary w-100">
+    <div class="row">
+      <input
+        id="newName"
+        placeholder="Имя персонажа"
+      />
+      <button id="createBtn">
         Создать
       </button>
     </div>
@@ -51,7 +46,7 @@
     <h2 id="charTitle"></h2>
     <div id="charMeta" class="muted"></div>
 
-    <!-- ❤️ РЕСУРСЫ ПЕРСОНАЖА -->
+    <!-- ❤️ РЕСУРСЫ -->
     <div class="resources">
 
       <!-- HP -->
@@ -86,7 +81,9 @@
 
     </div>
 
-    <!-- 📦 КОНТЕНТ ВКЛАДОК -->
+    <!-- ===================== -->
+    <!-- 📦 ВКЛАДКИ -->
+    <!-- ===================== -->
     <div id="tabContent">
 
       <!-- 📊 ХАРАКТЕРИСТИКИ -->
@@ -120,7 +117,9 @@
 
     </div>
 
+    <!-- ===================== -->
     <!-- 📌 НИЖНЯЯ НАВИГАЦИЯ -->
+    <!-- ===================== -->
     <div id="bottomNav" class="bottom-nav" style="display:none">
 
       <button id="nav-stats" class="active" onclick="openTab('stats')">
@@ -151,35 +150,28 @@
 
     <h2 id="itemEditorTitle">Предмет</h2>
 
-    <div class="mb-3">
-      <input id="editItemName"
-             class="form-control"
-             placeholder="Название предмета" />
-    </div>
+    <input
+      id="editItemName"
+      placeholder="Название предмета"
+    />
 
-    <div class="mb-3">
-      <textarea id="editItemDesc"
-                class="form-control"
-                rows="3"
-                placeholder="Описание"></textarea>
-    </div>
+    <textarea
+      id="editItemDesc"
+      placeholder="Описание"
+    ></textarea>
 
-    <div class="mb-3">
-      <textarea id="editItemStats"
-                class="form-control"
-                rows="3"
-                placeholder="Характеристики"></textarea>
-    </div>
+    <textarea
+      id="editItemStats"
+      placeholder="Характеристики"
+    ></textarea>
 
+    <button onclick="saveItem()">💾 Сохранить</button>
 
-    <button onclick="saveItem()" class="btn btn-success w-100 mb-2">
-  💾 Сохранить
-    </button>
-
-    <button id="deleteItemBtn"
-            onclick="deleteItem()"
-            class="btn btn-danger w-100"
-            style="display:none">
+    <button
+      id="deleteItemBtn"
+      onclick="deleteItem()"
+      style="display:none"
+    >
       🗑 Удалить
     </button>
 
