--- a/webapp/index.html
+++ b/webapp/index.html
@@ -51,9 +51,11 @@
 
       <!-- HP -->
       <div class="resource">
-        <div class="resource-label">
-          ❤️ HP <span id="hpText"></span>
+        <div class="resource-top">
+          <span class="resource-name">❤️ HP</span>
+          <span id="hpText" class="resource-value">0 / 0</span>
         </div>
+
         <div class="progress">
           <div id="hpBar" class="progress-bar hp"></div>
         </div>
@@ -61,9 +63,11 @@
 
       <!-- Mana -->
       <div class="resource">
-        <div class="resource-label">
-          🔵 Мана <span id="manaText"></span>
+        <div class="resource-top">
+          <span class="resource-name">🔵 Мана</span>
+          <span id="manaText" class="resource-value">0 / 0</span>
         </div>
+
         <div class="progress">
           <div id="manaBar" class="progress-bar mana"></div>
         </div>
@@ -71,15 +75,15 @@
 
       <!-- Energy -->
       <div class="resource">
-        <div class="resource-label">
-          ⚡ Энергия <span id="energyText"></span>
+        <div class="resource-top">
+          <span class="resource-name">⚡ Энергия</span>
+          <span id="energyText" class="resource-value">0 / 0</span>
         </div>
+
         <div class="progress">
           <div id="energyBar" class="progress-bar energy"></div>
         </div>
       </div>
-
-    </div>
 
     <!-- ===================== -->
     <!-- 📦 ВКЛАДКИ -->
