--- a/webapp/index.html
+++ b/webapp/index.html
@@ -53,7 +53,7 @@
       <div class="resource">
         <div class="resource-top">
           <span class="resource-name">❤️ HP</span>
-          <span id="hpText" class="resource-value">320 / 10</span>
+          <span id="hpText" class="resource-value">0 / 0</span>
         </div>
 
         <div class="progress">
@@ -65,7 +65,7 @@
       <div class="resource">
         <div class="resource-top">
           <span class="resource-name">🔵 Мана</span>
-          <span id="manaText" class="resource-value">170 / 1</span>
+          <span id="manaText" class="resource-value">0 / 0</span>
         </div>
 
         <div class="progress">
@@ -77,13 +77,16 @@
       <div class="resource">
         <div class="resource-top">
           <span class="resource-name">⚡ Энергия</span>
-          <span id="energyText" class="resource-value">200 / 90</span>
+          <span id="energyText" class="resource-value">0 / 0</span>
         </div>
 
         <div class="progress">
           <div id="energyBar" class="progress-bar energy"></div>
         </div>
       </div>
+
+    </div> <!-- ✅ ВОТ ЭТОГО НЕ ХВАТАЛО -->
+
 
     <!-- ===================== -->
     <!-- 📦 ВКЛАДКИ -->
