--- a/webapp/index.html
+++ b/webapp/index.html
@@ -79,7 +79,7 @@
       <!-- Mana -->
       <div class="resource">
         <div class="resource-top">
-          <span class="resource-name">❤️ HP</span>
+          <span class="resource-name">❤️ Mana</span>
 
           <div class="resource-controls">
             <button onclick="changeResource('hp', -1)">−</button>
@@ -107,7 +107,7 @@
       <!-- Energy -->
       <div class="resource">
         <div class="resource-top">
-          <span class="resource-name">❤️ HP</span>
+          <span class="resource-name">❤️ Energy</span>
 
           <div class="resource-controls">
             <button onclick="changeResource('hp', -1)">−</button>
