--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,160 +5,228 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DnD Sheet</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
+
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 <div class="wrap">
-
-  <h1>DnD Sheet</h1>
-  <div id="status" class="muted">Подключение…</div>
-
-  <!-- ===================== -->
-  <!-- 🧙 ЭКРАН 1: ПЕРСОНАЖИ -->
-  <!-- ===================== -->
-  <div id="listScreen" class="card">
-    <h2>Персонажи</h2>
-
-    <div class="row">
-      <input id="newName" placeholder="Имя персонажа" />
-      <button id="createBtn">Создать</button>
+  <header class="topbar">
+    <div class="d-flex align-items-center justify-content-between gap-2">
+      <div class="min-w-0">
+        <div class="app-title">🧙 Лист персонажа</div>
+        <div id="status" class="muted">Подключение…</div>
+      </div>
+      <button id="btnSync" class="btn btn-sm btn-outline-light">Синхр.</button>
     </div>
 
-    <ul id="chars"></ul>
-  </div>
+    <div class="mt-2 d-flex gap-2">
+      <select id="characterSelect" class="form-select form-select-sm"></select>
+      <button id="btnNew" class="btn btn-sm btn-light">+ Новый</button>
+    </div>
+  </header>
 
-  <!-- ===================== -->
-  <!-- 🧙‍♂️ ЭКРАН 2: ПЕРСОНАЖ -->
-  <!-- ===================== -->
-  <div id="characterScreen" class="card" style="display:none">
-    <button class="btn-ghost" onclick="backToList()">← Назад</button>
+  <main class="content">
+    <ul class="nav nav-pills nav-fill small sticky-tabs" id="tabs">
+      <li class="nav-item"><button class="nav-link active" data-tab="main">Основное</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="stats">Статы</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="inv">Инв.</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="spells">Закл.</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="abilities">Ум.</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="states">Сост.</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="equip">Экип.</button></li>
+    </ul>
 
-    <h2 id="charTitle"></h2>
-    <div id="charMeta" class="muted"></div>
+    <!-- MAIN -->
+    <section class="tab" id="tab-main">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="row g-2">
+            <div class="col-12">
+              <label class="form-label">Имя</label>
+              <input id="f_name" class="form-control" placeholder="Напр. Элвин" />
+            </div>
+            <div class="col-6">
+              <label class="form-label">Раса</label>
+              <input id="f_race" class="form-control" placeholder="Эльф" />
+            </div>
+            <div class="col-6">
+              <label class="form-label">Класс</label>
+              <input id="f_klass" class="form-control" placeholder="Рейнджер" />
+            </div>
+            <div class="col-6">
+              <label class="form-label">Пол</label>
+              <input id="f_gender" class="form-control" placeholder="" />
+            </div>
+            <div class="col-3">
+              <label class="form-label">Уровень</label>
+              <input id="f_level" type="number" class="form-control" min="1" />
+            </div>
+            <div class="col-3">
+              <label class="form-label">XP</label>
+              <input id="f_xp" type="number" class="form-control" min="0" />
+            </div>
+          </div>
 
-    <!-- ❤️ РЕСУРСЫ (кликабельные) -->
-    <div class="resources">
+          <hr class="hr-soft" />
 
-      <div class="resource" onclick="openResourceEditor('hp')">
-        <div class="resource-top">
-          <span class="resource-name">❤️ HP</span>
-          <span id="hpText" class="resource-value"></span>
-        </div>
-        <div class="progress">
-          <div id="hpBar" class="progress-bar hp"></div>
-          <div class="progress-text" id="hpTextOnBar"></div>
+          <div class="row g-2">
+            <div class="col-12"><div class="section-title">Ресурсы</div></div>
+
+            <div class="col-4">
+              <label class="form-label">HP</label>
+              <div class="input-group input-group-sm">
+                <input id="f_hp" type="number" class="form-control" />
+                <span class="input-group-text">/</span>
+                <input id="f_hp_max" type="number" class="form-control" />
+              </div>
+              <div class="hint">+lvl <input id="f_hp_per_level" type="number" class="mini" /></div>
+            </div>
+
+            <div class="col-4">
+              <label class="form-label">Мана</label>
+              <div class="input-group input-group-sm">
+                <input id="f_mana" type="number" class="form-control" />
+                <span class="input-group-text">/</span>
+                <input id="f_mana_max" type="number" class="form-control" />
+              </div>
+              <div class="hint">+lvl <input id="f_mana_per_level" type="number" class="mini" /></div>
+            </div>
+
+            <div class="col-4">
+              <label class="form-label">Энергия</label>
+              <div class="input-group input-group-sm">
+                <input id="f_energy" type="number" class="form-control" />
+                <span class="input-group-text">/</span>
+                <input id="f_energy_max" type="number" class="form-control" />
+              </div>
+              <div class="hint">+lvl <input id="f_energy_per_level" type="number" class="mini" /></div>
+            </div>
+          </div>
+
+          <div class="d-grid mt-3">
+            <button id="btnSaveMain" class="btn btn-primary">Сохранить</button>
+          </div>
         </div>
       </div>
 
-      <div class="resource" onclick="openResourceEditor('mana')">
-        <div class="resource-top">
-          <span class="resource-name">🔵 Мана</span>
-          <span id="manaText" class="resource-value"></span>
-        </div>
-        <div class="progress">
-          <div id="manaBar" class="progress-bar mana"></div>
-          <div class="progress-text" id="manaTextOnBar"></div>
-        </div>
-      </div>
-
-      <div class="resource" onclick="openResourceEditor('energy')">
-        <div class="resource-top">
-          <span class="resource-name">⚡ Энергия</span>
-          <span id="energyText" class="resource-value"></span>
-        </div>
-        <div class="progress">
-          <div id="energyBar" class="progress-bar energy"></div>
-          <div class="progress-text" id="energyTextOnBar"></div>
+      <div class="card card-soft mt-3">
+        <div class="card-body">
+          <div class="section-title">Правила левел-апа / заметки DM</div>
+          <textarea id="f_level_up_rules" class="form-control" rows="5" placeholder="Что получает персонаж при повышении уровня…"></textarea>
+          <div class="d-grid mt-2">
+            <button id="btnSaveRules" class="btn btn-outline-primary">Сохранить заметку</button>
+          </div>
         </div>
       </div>
+    </section>
 
-    </div>
+    <!-- STATS -->
+    <section class="tab d-none" id="tab-stats">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="section-title">Характер</div>
+          <div class="grid-2" id="statsPersonality"></div>
 
-    <!-- 📦 ВКЛАДКИ -->
-    <div id="tabContent">
-      <div id="tab-stats" class="tab-content"></div>
+          <hr class="hr-soft" />
 
-      <div id="tab-inventory" class="tab-content" style="display:none">
-        <div class="inventory-header">
-          <h3>Инвентарь</h3>
-          <button class="btn-icon" onclick="openItemEditor()">➕</button>
+          <div class="section-title">Бой</div>
+          <div class="grid-2" id="statsCombat"></div>
+
+          <div class="d-grid mt-3">
+            <button id="btnSaveStats" class="btn btn-primary">Сохранить статы</button>
+          </div>
         </div>
-        <ul id="inventoryList" class="list"></ul>
       </div>
+    </section>
 
-      <div id="tab-spells" class="tab-content" style="display:none">
-        <p class="muted">Заклинания будут позже</p>
+    <!-- INVENTORY -->
+    <section class="tab d-none" id="tab-inv">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="section-title mb-0">Инвентарь</div>
+            <button id="btnAddItem" class="btn btn-sm btn-light">+ Предмет</button>
+          </div>
+          <div id="invList" class="list mt-2"></div>
+        </div>
       </div>
-    </div>
+    </section>
 
-    <!-- 📌 НИЖНЯЯ НАВИГАЦИЯ -->
-    <div id="bottomNav" class="bottom-nav" style="display:none">
-      <button id="nav-stats" class="active" onclick="openTab('stats')">
-        <span class="icon">📊</span>
-        <span class="label">Хар-ки</span>
-      </button>
-      <button id="nav-inventory" onclick="openTab('inventory')">
-        <span class="icon">🎒</span>
-        <span class="label">Инвентарь</span>
-      </button>
-      <button id="nav-spells" onclick="openTab('spells')">
-        <span class="icon">✨</span>
-        <span class="label">Магия</span>
-      </button>
-    </div>
-  </div>
-
-  <!-- ===================== -->
-  <!-- 🧩 ЭКРАН: ПРЕДМЕТ -->
-  <!-- ===================== -->
-  <div id="itemEditor" class="card" style="display:none">
-    <button class="btn-ghost" onclick="closeItemEditor()">← Назад</button>
-
-    <h2 id="itemEditorTitle">Предмет</h2>
-
-    <input id="editItemName" placeholder="Название предмета" />
-    <textarea id="editItemDesc" placeholder="Описание"></textarea>
-    <textarea id="editItemStats" placeholder="Характеристики"></textarea>
-
-    <button onclick="saveItem()">💾 Сохранить</button>
-    <button id="deleteItemBtn" class="btn-danger" onclick="deleteItem()" style="display:none">
-      🗑 Удалить
-    </button>
-  </div>
-
-  <!-- ===================== -->
-  <!-- 🧩 ЭКРАН: РЕСУРС -->
-  <!-- ===================== -->
-  <div id="resourceEditor" class="card" style="display:none">
-    <button class="btn-ghost" onclick="closeResourceEditor()">← Назад</button>
-
-    <h2 id="resourceEditorTitle">Ресурс</h2>
-
-    <div class="field">
-      <label>Текущее</label>
-      <div class="stepper">
-        <button class="btn-step" onclick="stepResource(-1)">−</button>
-        <input id="resCurrent" type="number" />
-        <button class="btn-step" onclick="stepResource(1)">+</button>
+    <!-- SPELLS -->
+    <section class="tab d-none" id="tab-spells">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="section-title mb-0">Заклинания</div>
+            <button id="btnAddSpell" class="btn btn-sm btn-light">+ Заклинание</button>
+          </div>
+          <div id="spellsList" class="list mt-2"></div>
+        </div>
       </div>
-    </div>
+    </section>
 
-    <div class="field">
-      <label>Максимум</label>
-      <input id="resMax" type="number" />
-    </div>
+    <!-- ABILITIES -->
+    <section class="tab d-none" id="tab-abilities">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="section-title mb-0">Умения</div>
+            <button id="btnAddAbility" class="btn btn-sm btn-light">+ Умение</button>
+          </div>
+          <div id="abilitiesList" class="list mt-2"></div>
+        </div>
+      </div>
+    </section>
 
-    <div class="field">
-      <label>Прибавка за уровень</label>
-      <input id="resPerLevel" type="number" />
-    </div>
+    <!-- STATES -->
+    <section class="tab d-none" id="tab-states">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="section-title mb-0">Состояния</div>
+            <button id="btnAddState" class="btn btn-sm btn-light">+ Состояние</button>
+          </div>
+          <div id="statesList" class="list mt-2"></div>
+        </div>
+      </div>
+    </section>
 
-    <button onclick="saveResource()">💾 Сохранить</button>
-  </div>
+    <!-- EQUIPMENT -->
+    <section class="tab d-none" id="tab-equip">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="section-title">Экипировка</div>
+          <div class="grid-2" id="equipGrid"></div>
+          <div class="d-grid mt-3">
+            <button id="btnSaveEquip" class="btn btn-primary">Сохранить экипировку</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
+  </main>
 </div>
 
-<script src="app.js?v=2"></script>
+<!-- MODAL -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalTitle">Добавить</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="modalBody"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Отмена</button>
+        <button type="button" class="btn btn-primary" id="modalSave">Сохранить</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
