--- a/webapp/index.html
+++ b/webapp/index.html
@@ -41,6 +41,7 @@
       <li class="nav-item"><button class="nav-link" data-tab="abilities">Ум.</button></li>
       <li class="nav-item"><button class="nav-link" data-tab="states">Сост.</button></li>
       <li class="nav-item"><button class="nav-link" data-tab="equip">Экип.</button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="custom">Поля</button></li>
     </ul>
 
     <!-- MAIN -->
@@ -211,6 +212,22 @@
       </div>
     </section>
 
+    <!-- CUSTOM FIELDS -->
+    <section class="tab d-none" id="tab-custom">
+      <div class="card card-soft">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <div>
+              <div class="section-title mb-0">Поля</div>
+              <div class="hint">Поля из выбранного шаблона. Сохраняются отдельно от основных статов.</div>
+            </div>
+            <button id="btnSaveCustom" class="btn btn-primary btn-sm">Сохранить</button>
+          </div>
+          <div id="customRoot" class="mt-3"></div>
+        </div>
+      </div>
+    </section>
+
   </main>
 </div>
 
@@ -271,6 +288,10 @@
         <div class="hint mt-2">Что попадёт в шаблон: какие вкладки показывать в WebApp (интерфейс).
           Сами данные персонажа в шаблон не копируются.</div>
         <div class="mt-2" id="tplTabs"></div>
+
+        <label class="form-label mt-3">Кастомные поля (JSON, необязательно)</label>
+        <textarea id="tplCustomSections" class="form-control" rows="6" placeholder='{"custom_sections":[{"title":"Биография","fields":[{"key":"bio","label":"Био","type":"textarea"}]}]}'></textarea>
+        <div class="hint mt-1">Если оставить пустым, создастся шаблон только с вкладками. Для кастомных полей укажи custom_sections.</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Закрыть</button>
