--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
   <title>DnD Sheet</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="styles.css" />
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -33,15 +34,15 @@
   </header>
 
   <main class="content">
-    <ul class="nav nav-pills nav-fill small sticky-tabs" id="tabs">
-      <li class="nav-item"><button class="nav-link active" data-tab="main">Основное</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="stats">Статы</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="inv">Инв.</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="spells">Закл.</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="abilities">Ум.</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="states">Сост.</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="equip">Экип.</button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="custom">Поля</button></li>
+    <ul class="nav nav-pills small sticky-tabs" id="tabs">
+      <li class="nav-item"><button class="nav-link active" data-tab="main"><i class="bi bi-person-badge"></i><span>Основное</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="stats"><i class="bi bi-bar-chart"></i><span>Статы</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="inv"><i class="bi bi-backpack"></i><span>Инв.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="spells"><i class="bi bi-stars"></i><span>Закл.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="abilities"><i class="bi bi-lightning-charge"></i><span>Ум.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="states"><i class="bi bi-activity"></i><span>Сост.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="equip"><i class="bi bi-shield"></i><span>Экип.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="custom"><i class="bi bi-sliders"></i><span>Поля</span></button></li>
     </ul>
 
     <!-- MAIN -->
@@ -153,7 +154,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <div class="section-title mb-0">Инвентарь</div>
-            <button id="btnAddItem" class="btn btn-sm btn-light">+ Предмет</button>
+            <button id="btnAddItem" class="btn btn-sm btn-light"><i class="bi bi-plus-lg me-1"></i>Предмет</button>
           </div>
           <div id="invList" class="list mt-2"></div>
         </div>
@@ -166,7 +167,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <div class="section-title mb-0">Заклинания</div>
-            <button id="btnAddSpell" class="btn btn-sm btn-light">+ Заклинание</button>
+            <button id="btnAddSpell" class="btn btn-sm btn-light"><i class="bi bi-plus-lg me-1"></i>Заклинание</button>
           </div>
           <div id="spellsList" class="list mt-2"></div>
         </div>
@@ -179,7 +180,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <div class="section-title mb-0">Умения</div>
-            <button id="btnAddAbility" class="btn btn-sm btn-light">+ Умение</button>
+            <button id="btnAddAbility" class="btn btn-sm btn-light"><i class="bi bi-plus-lg me-1"></i>Умение</button>
           </div>
           <div id="abilitiesList" class="list mt-2"></div>
         </div>
@@ -192,7 +193,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <div class="section-title mb-0">Состояния</div>
-            <button id="btnAddState" class="btn btn-sm btn-light">+ Состояние</button>
+            <button id="btnAddState" class="btn btn-sm btn-light"><i class="bi bi-plus-lg me-1"></i>Состояние</button>
           </div>
           <div id="statesList" class="list mt-2"></div>
         </div>
