--- a/webapp/index.html
+++ b/webapp/index.html
@@ -38,6 +38,21 @@
     <i class="bi bi-plus-lg"></i>
   </button>
 
+  <!-- FAB menu -->
+  <div id="fabMenu" class="fab-menu d-none" role="menu" aria-label="Меню добавления">
+    <button class="fab-item" type="button" data-action="add-spell">
+      <i class="bi bi-stars"></i><span>Заклинание</span>
+    </button>
+    <button class="fab-item" type="button" data-action="add-ability">
+      <i class="bi bi-lightning-charge"></i><span>Умение</span>
+    </button>
+    <button class="fab-item" type="button" data-action="add-item">
+      <i class="bi bi-backpack"></i><span>Предмет</span>
+    </button>
+    <button class="fab-item" type="button" data-action="add-state">
+      <i class="bi bi-activity"></i><span>Состояние</span>
+    </button>
+  </div>
 
   <main class="content">
     <ul class="nav nav-pills small sticky-tabs" id="tabs">
